--- a/Sort/CMakeLists.txt
+++ b/Sort/CMakeLists.txt
@@ -1,3 +1,4 @@
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
-ADD_EXECUTABLE(sort main.cpp)
+ADD_EXECUTABLE(quick_sort_demo quick_sort_demo.cpp)
+ADD_EXECUTABLE(insert_sort_demo insert_sort_demo.cpp)
